[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq={ version= "2.1.1", features = ["json"] }
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.80"
thiserror="1.0.31"
url="2.2.2"
reqwest = { version = "0.11.10", features = ["json"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.2.1"

[features]
async = [
  "reqwest"
]